# cppmodule

./: .gitignore  CMakeLists.txt
include/mymodule/: mymodule.h
src/: CMakeLists.txt  main.cpp
tooling/common/: argparse.sh.inc
tooling/x64-linux/analyze/: exec.sh
tooling/x64-linux/analyze/docker/: Dockerfile
tooling/x64-linux/run/: exec.sh
tooling/x64-linux/run/docker/: Dockerfile
